--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "hls.js": "^1.5.11",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.2.1"
   },
   "devDependencies": {
     "postcss": "^8",
