--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@cloudflare/next-on-pages": "^1.11.3",
     "hls.js": "^1.5.11",
     "next": "14.2.3",
     "react": "^18",
