--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@cloudflare/next-on-pages": "^1.11.3",
+    "axios": "^1.7.2",
+    "dayjs": "^1.11.11",
     "hls.js": "^1.5.11",
     "next": "14.2.3",
     "react": "^18",
